# Picture_Capture

./: CALIBRATION_THEORY.md  Configuration.md  README.md  ROI.py  calibration2.py  calibration_ICP.py  calibration_pipeline.py  calibration_pipeline_aruco.py  calibration_pnp_icp_refine.py  camera_parameters.txt  transform.py  多Kinect2.md
data/: calibration_final.txt  calibration_pnp_icp.txt  calibration_result_hybrid.txt  calibration_symmetric_pnp.txt  vis_aligned_source.ply  vis_target.ply
data/kinect2/: kinect2_cloud_20260109_162301_roi.ply  kinect2_cloud_20260109_162325_roi.ply  kinect2_cloud_20260109_162412_roi.ply
data/orbbec/: orbbec_cloud_20260109_162301.ply  orbbec_cloud_20260109_162301_roi.ply  orbbec_cloud_20260109_162325_roi.ply  orbbec_cloud_20260109_162412.ply  orbbec_cloud_20260109_162412_roi.ply
install/: local_setup.sh  setup.sh
install/get_picture/lib/get_picture/: DualCameraKinectNode  DualCameraKinectNode.py  DualCameraOrbbecNode  DualCameraSaveNode  aruco_pose_node  dual_cam_view  get_kinect2_node  get_picture
install/get_picture/share/get_picture/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kinect2_bridge/lib/kinect2_bridge/: kinect2_bridge_node
install/kinect2_bridge/share/kinect2_bridge/: local_setup.sh  package.sh
install/kinect2_calibration/lib/kinect2_calibration/: kinect2_calibration_node
install/kinect2_calibration/share/kinect2_calibration/: local_setup.sh  package.ps1  package.sh
install/orbbec_camera/lib/orbbec_camera/: list_devices_node  (+12 more)
log/: latest_build
src/get_picture/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/get_picture/get_picture/: hand_eye_calib_node.py
src/get_picture/get_picture_node/: DualCameraSaveNode.py
(+10 files in other folders)
