<?xml version="1.0"?>
<package format="3">
  <name>get_picture</name>
  <version>0.0.1</version>
  <description>Get Picture Node for ROS 2</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>TODO: License</license>

  <!-- 执行依赖 -->
  <exec_depend>rclpy</exec_depend>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
